crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/expected_function_in_using_directive/not_a_library/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 4357] Error: Library name expected.
   ╭─[input.sol:7:11]
   │
 7 │     using Other for uint256;
   │           ──┬──  
   │             ╰──── Error occurred here.
───╯
